--- a/EXAMPLE_MIN1.yaml
+++ b/EXAMPLE_MIN1.yaml
@@ -299,30 +299,33 @@ theory:
       k_per_logint: 20
 
 sampler:
-  polychord:
-    path: null
-    nlive: 128
-    num_repeats: 2d
-    do_clustering: false
-    precision_criterion: 0.001
-    boost_posterior: 10
-    feedback: 2
-    blocking:
-      - [1,
-          [
-            As_1e9, ns, H0, omegab, omegam, w0pwa, w
-          ]
-        ]
-      - [3,
-          [
-            DES_DZ_S1, DES_DZ_S2, DES_DZ_S3, DES_DZ_S4, 
-            DES_A1_1, DES_A1_2, DES_A2_1, DES_A2_2, DES_BTA_1
-          ]
-        ]
-      - [15,
-          [
-            DES_M1, DES_M2, DES_M3, DES_M4
-          ]
-        ]
+  minimize:
+    # Method: bobyqa|scipy
+    method: bobyqa
+    # Minimizes the full posterior (False) or just the likelihood (True)
+    # Likelihood maximization is subject to prior bounds!
+    ignore_prior: False
+    # Maximum number of iterations (default: practically infinite)
+    max_evals: 1e6d
+    # Treatment of unbounded parameters: confidence level to use
+    # (Use with care if there are likelihood modes close to the edge of the prior)
+    confidence_for_unbounded: 0.9999995  # 5 sigmas of the prior
+    # Seeding runs
+    seed:  # an initial seed (entropy) for the numpy random generator
+    # option: value
+    # bobyqa:
+    #  - https://numericalalgorithmsgroup.github.io/pybobyqa/build/html/userguide.html
+    #  - https://numericalalgorithmsgroup.github.io/pybobyqa/build/html/advanced.html
+    override_bobyqa:
+      # option: value
+      # Relaxed convergence criterion for numerically-noisy likelihoods
+      rhoend: 0.05
+    # File (including path) or matrix defining a covariance matrix for the proposal:
+    # - null (default): will be generated from params info (prior and proposal)
+    # - matrix: remember to set `covmat_params` to the parameters in the matrix
+    # - "auto" (cosmology runs only): will be looked up in a library
+    # In any case, if an old chain its present, its covmat will be loaded instead.
+    covmat:
+    covmat_params:
 
-output: ./projects/des_y3/chains/EXAMPLE_POLY1
+output: ./projects/des_y3/chains/EXAMPLE_MCMC1
