--- a/EXAMPLE_MIN4.yaml
+++ b/EXAMPLE_MIN4.yaml
@@ -3,11 +3,11 @@ debug: False
 stop_at_error: False
 
 likelihood:
-  des_y3.des_cosmic_shear:
+  des_y3.des_3x2pt:
     path: ./external_modules/data/des_y3
-    data_file: DES_Y3_real.dataset
+    data_file: DES_Y1_real.dataset
     accuracyboost: 1.0
-    integration_accuracy: 1
+    integration_accuracy: 0
     kmax_boltzmann: 5.0
 
 params:
@@ -91,99 +91,96 @@ params:
   tau:
     value: 0.0697186
     latex: \tau_\mathrm{reio}
-  # ----------------------------------------------------------------------------
-  # DES-Y3 CS nuissance parameter Start
-  # ----------------------------------------------------------------------------
-  # ----------------------------------------------------------------------------
-  # DES-Y3 SOURCE VALUES FROM TABLE I, PAGE 11 of 2105.13549
-  # ----------------------------------------------------------------------------
+  # ---------------------------------------------------------------------------------------
+  # DES-Y1 3x2pt nuissance parameter begins
+  # ---------------------------------------------------------------------------------------
   DES_DZ_S1:
     prior:
       dist: norm
-      loc: 0.0
-      scale: 0.018
+      loc: -0.001
+      scale: 0.016
     ref:
       dist: norm
-      loc: 0.0
-      scale: 0.018
+      loc: -0.001
+      scale: 0.016
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^1
   DES_DZ_S2:
     prior:
       dist: norm
-      loc: 0.0
-      scale: 0.015
+      loc: -0.019
+      scale: 0.013
     ref:
       dist: norm
-      loc: 0.0
-      scale: 0.015
+      loc: -0.019
+      scale: 0.013
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^2
   DES_DZ_S3:
     prior:
       dist: norm
-      loc: 0.0
+      loc: 0.009
       scale: 0.011
     ref:
       dist: norm
-      loc: 0.0
+      loc: 0.009
       scale: 0.011
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^3
   DES_DZ_S4:
     prior:
       dist: norm
-      loc: 0.0
-      scale: 0.017
+      loc: -0.018
+      scale: 0.022
     ref:
       dist: norm
-      loc: 0.0
-      scale: 0.017
+      loc: -0.018
+      scale: 0.022
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^4
   DES_M1:
     prior:
       dist: norm
-      loc: -0.006
-      scale: 0.009
+      loc: 0.012
+      scale: 0.023
     ref:
       dist: norm
-      loc: -0.006
-      scale: 0.009
-    proposal: 0.004
+      loc: 0.012
+      scale: 0.023
+    proposal: 0.005
     latex: m_\mathrm{DES}^1
   DES_M2:
     prior:
       dist: norm
-      loc: -0.02
-      scale: 0.008
+      loc: 0.012
+      scale: 0.023
     ref:
       dist: norm
-      loc: -0.02
-      scale: 0.008
-    proposal: 0.004
+      loc: 0.012
+      scale: 0.023
+    proposal: 0.005
     latex: m_\mathrm{DES}^2
   DES_M3:
     prior:
       dist: norm
-      loc: -0.024
-      scale: 0.008
+      loc: 0.012
+      scale: 0.023
     ref:
       dist: norm
-      loc: -0.024
-      scale: 0.008
-    proposal: 0.004
+      loc: 0.012
+      scale: 0.023
+    proposal: 0.005
     latex: m_\mathrm{DES}^3
   DES_M4:
     prior:
       dist: norm
-      loc: -0.037
-      scale: 0.008
+      loc: 0.012
+      scale: 0.023
     ref:
       dist: norm
-      loc: -0.037
-      scale: 0.008
-    proposal: 0.003
+      loc: 0.012
+      scale: 0.023
+    proposal: 0.005
     latex: m_\mathrm{DES}^4
   DES_A1_1:
     prior:
@@ -205,38 +202,110 @@ params:
       scale: 0.5
     proposal: 0.5
     latex: A_\mathrm{1-IA,DES}^2
-  DES_A2_1:
-    prior:
-      min: -5
-      max:  5
-    ref:
-      dist: norm
-      loc: -1.36
-      scale: 0.5
-    proposal: 0.5
-    latex: A_\mathrm{2-IA,DES}^1
-  DES_A2_2:
-    prior:
-      min: -5
-      max:  5
-    ref:
-      dist: norm
-      loc: -2.5
-      scale: 0.5
-    proposal: 0.5
+  DES_A2_1: #TATT, not used for Y1  (IA = 4 on cosmolike which does't even consider these params)
+    value: 0.0
+    latex: A_\mathrm{2-IA,DES}^1 
+  DES_A2_2: #TATT, not used for Y1  (IA = 4 on cosmolike which does't even consider these params)
+    value: 0.0
     latex: A_\mathrm{2-IA,DES}^2
-  DES_BTA_1:
+  DES_BTA_1: #TATT, not used for Y1 (IA = 4 on cosmolike which does't even consider these params)
+    value: 1.0
+    latex: A_\mathrm{BTA-IA,DES}^1
+ # Lensing photo-z errors
+  DES_DZ_L1:
     prior:
-      min: 0
-      max: 2
+      dist: norm
+      loc: 0.008
+      scale: 0.007
     ref:
       dist: norm
-      loc: 1
-      scale: 0.15
-    proposal: 0.1
+      loc: 0.008
+      scale: 0.007
+    proposal: 0.004
+    latex: \Delta z_\mathrm{l,DES}^1
+  DES_DZ_L2:
+    prior:
+      dist: norm
+      loc: -0.005
+      scale: 0.007
+    ref:
+      dist: norm
+      loc: -0.005
+      scale: 0.007
+    proposal: 0.003
+    latex: \Delta z_\mathrm{l,DES}^2
+  DES_DZ_L3:
+    prior:
+      dist: norm
+      loc: 0.006
+      scale: 0.006
+    ref:
+      dist: norm
+      loc: 0.006
+      scale: 0.006
+    proposal: 0.003
+    latex: \Delta z_\mathrm{l,DES}^3
+  DES_DZ_L4:
+    prior:
+      dist: norm
+      loc: 0.0
+      scale: 0.01
+    ref:
+      dist: norm
+      loc: 0.0
+      scale: 0.01
+    proposal: 0.005
+    latex: \Delta z_\mathrm{l,DES}^4
+  DES_DZ_L5:
+    prior:
+      dist: norm
+      loc: 0.0
+      scale: 0.01
+    ref:
+      dist: norm
+      loc: 0.0
+      scale: 0.01
+    proposal: 0.005
+    latex: \Delta z_\mathrm{l,DES}^5
   # ----------------------------------------------------------------------------
-  # DES-Y3 CS nuissance parameter End
+  # Cosmolike convention BMAG_COSMOLIKE = 2 BMAG_COSMOSIS - 1
   # ----------------------------------------------------------------------------
+  DES_BMAG_1:
+    value: 0.0
+    latex: b_\mathrm{BMAG-DES}^1
+  DES_BMAG_2:
+    value: 0.0
+    latex: b_\mathrm{BMAG-DES}^2
+  DES_BMAG_3:
+    value: 0.0
+    latex: b_\mathrm{BMAG-DES}^3
+  DES_BMAG_4:
+    value: 0.0
+    latex: b_\mathrm{BMAG-DES}^4
+  DES_BMAG_5:
+    value: 0.0
+    latex: b_\mathrm{BMAG-DES}^5
+  # ----------------------------------------------------------------------------
+  # POINT MASS MARGINALIZATION
+  # ----------------------------------------------------------------------------
+  DES_PM1:
+    value: 0.0
+    latex: PM_\mathrm{DES}^1
+  DES_PM2:
+    value: 0.0
+    latex: PM_\mathrm{DES}^2
+  DES_PM3:
+    value: 0.0
+    latex: PM_\mathrm{DES}^3
+  DES_PM4:
+    value: 0.0
+    latex: PM_\mathrm{DES}^4
+  DES_PM5:
+    value: 0.0
+    latex: PM_\mathrm{DES}^5
+  # ---------------------------------------------------------------------------------------
+  # DES-Y1 3x2pt nuissance parameter End
+  # ---------------------------------------------------------------------------------------
   # ---------------------------------------------------------------------------------------
   # ------------------------------------- DERIVED PARAMETERS ------------------------------
   # ---------------------------------------------------------------------------------------
@@ -290,8 +359,8 @@ theory:
     use_renames: True
     extra_args:
       halofit_version: takahashi
-      AccuracyBoost: 1.05
-      lens_potential_accuracy: 1
+      AccuracyBoost: 1.1
+      lens_potential_accuracy: 1.0
       num_massive_neutrinos: 1
       nnu: 3.046
       dark_energy_model: ppf
@@ -299,30 +368,33 @@ theory:
       k_per_logint: 20
 
 sampler:
-  polychord:
-    path: null
-    nlive: 128
-    num_repeats: 2d
-    do_clustering: false
-    precision_criterion: 0.001
-    boost_posterior: 10
-    feedback: 2
-    blocking:
-      - [1,
-          [
-            As_1e9, ns, H0, omegab, omegam, w0pwa, w
-          ]
-        ]
-      - [3,
-          [
-            DES_DZ_S1, DES_DZ_S2, DES_DZ_S3, DES_DZ_S4, 
-            DES_A1_1, DES_A1_2, DES_A2_1, DES_A2_2, DES_BTA_1
-          ]
-        ]
-      - [15,
-          [
-            DES_M1, DES_M2, DES_M3, DES_M4
-          ]
-        ]
+  minimize:
+    # Method: bobyqa|scipy
+    method: bobyqa
+    # Minimizes the full posterior (False) or just the likelihood (True)
+    # Likelihood maximization is subject to prior bounds!
+    ignore_prior: False
+    # Maximum number of iterations (default: practically infinite)
+    max_evals: 1e6d
+    # Treatment of unbounded parameters: confidence level to use
+    # (Use with care if there are likelihood modes close to the edge of the prior)
+    confidence_for_unbounded: 0.9999995  # 5 sigmas of the prior
+    # Seeding runs
+    seed:  # an initial seed (entropy) for the numpy random generator
+    # option: value
+    # bobyqa:
+    #  - https://numericalalgorithmsgroup.github.io/pybobyqa/build/html/userguide.html
+    #  - https://numericalalgorithmsgroup.github.io/pybobyqa/build/html/advanced.html
+    override_bobyqa:
+      # option: value
+      # Relaxed convergence criterion for numerically-noisy likelihoods
+      rhoend: 0.05
+    # File (including path) or matrix defining a covariance matrix for the proposal:
+    # - null (default): will be generated from params info (prior and proposal)
+    # - matrix: remember to set `covmat_params` to the parameters in the matrix
+    # - "auto" (cosmology runs only): will be looked up in a library
+    # In any case, if an old chain its present, its covmat will be loaded instead.
+    covmat:
+    covmat_params:
 
-output: ./projects/des_y3/chains/EXAMPLE_POLY1
+output: ./projects/des_y3/chains/EXAMPLE_MCMC4
